sumo/tests/sumo/extended/emitter/errors/routedist/false_prob/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'probability' in definition of emitter/routedistelem 'emitter' is not a real number.
Quitting (on error).
